...
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <searchBar contentMode="redraw" placeholder="Search Pokemon" translatesAutoresizingMaskIntoConstraints="NO" id="MoD-vL-Rf8" userLabel="Search">
                                <rect key="frame" x="0.0" y="64" width="375" height="44"/>
                                <color key="barTintColor" red="1" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                <textInputTraits key="textInputTraits" keyboardAppearance="light"/>
                                <connections>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="Kwm-eP-nCd"/>
                                </connections>
...
                            <constraint firstItem="MoD-vL-Rf8" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="cc1-i9-ty1"/>
                            <constraint firstAttribute="trailing" secondItem="MoD-vL-Rf8" secondAttribute="trailing" id="lKq-hQ-SLU"/>
                            <constraint firstItem="tWh-0z-E2i" firstAttribute="top" secondItem="MoD-vL-Rf8" secondAttribute="bottom" id="vdE-Sj-m0B"/>
                            <constraint firstAttribute="trailing" secondItem="tWh-0z-E2i" secondAttribute="trailing" id="wFB-jT-R7Q"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Pokepedia" id="PA7-Mc-qaH"/>
                    <connections>
                        <outlet property="searchBar" destination="MoD-vL-Rf8" id="3Bb-F8-ZMw"/>
                        <outlet property="tableView" destination="tWh-0z-E2i" id="zeE-Z8-dpf"/>
                        <segue destination="iTh-fU-dmd" kind="show" identifier="showPokemonDetailsSegue" id="Na8-VR-Ypi"/>
                    </connections>
                </viewController>
...
